semi fixed layout problem

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,14 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+  /* background-color: blue;
+  min-height: fit-content;
+  height: min-content; */
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 a {
